# spacemed2026

./: .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci.ymly  CITATION.cff  README.md  fmri.sh  session2.ipynb  session2.py  session3-Copy1.py  session3.ipynb  session3.py  session4.html  session4.ipynb  session4.py  session5.ipynb  session5.py  setup.cfg  spacemed.yml
.ipynb_checkpoints/: session3-checkpoint.ipynb
Rproject/: Exam6.Rmd  Exam6.html  Exam_6_2.csv
data/: README.md  ols.csv
doc/: api.rst  conf.py  index.rst  reflection.rst  session-1.md  session-10.md  session-2.md  session-3.md  session-4.md  session-5.md  session-6.md  session-7.md  session-8.md  session-9.md  session6.md  sm_plot_heart.rst  usage.rst
notebook/: ECG.ipynb  Session8.ipynb  Session8.py  s5_assignment.ipynb  s5_assignment.py  session2.py  session3.ipynb  session3.py  session4.ipynb  session4.py  session5.ipynb  session5.py  session6.ipynb  session6.py
session4_files/libs/bootstrap/: bootstrap-d68d276be3ad05ae0f6a2a100f009a06.min.css
src/spacemed/: __init__.py  __version__.py  cal_hr.py  cross_correlation.py  find_peaks.py  load_pulse.py  mri.py  plot_heart_rate.py  plot_hr.py
