[metadata]
name = spacemed
version = attr: spacemed.__version__.__version__
author = Shan-Shan Chen
author_email = shan-shan.chen@charite.de
url = https://git.bihealth.org/spacemed-digital-literacy/2026/personal/shch14
description = Tools for SpaceMed Course
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
 License :: OSI Approved :: GNU General Public License v3
 Programming Language :: Python :: 3
 Intended Audience :: Science/Research
 Topic :: Scientific/Engineering

[options]
package_dir =
 =src
packages = spacemed
zip_safe = True
include_package_data = True
install_requires =
 pandas
 scipy

[options.entry_points]
console_scripts =
 sm_plot_heart = spacemed.plot_heart_rate:main
 sm_plot_fmri = spacemed.cross_correlation:main

[options.extras_require]
lint = flake8 >= 3.5.0
docs =
 sphinx
 sphinx_rtd_theme
 sphinx-argparse
 myst-parser

[build_sphinx]
project = SpaceMed Tools
source-dir = doc
